# parking-spot-monitor

./: .gitignore  CHANGELOG.md  Dockerfile  PUBLICATION.md  README.md  config.yaml.example  docker-compose.yml  main.py  parking-spot-monitor-spec.md  pyproject.toml  requirements.txt  skills-lock.json
data/: compose-config.txt  live-proof-evidence.md  live-proof-input-preflight.json  live-proof-operator-blocker.md  live-proof-result.json  m001-s05-reconciliation-status.json
examples/: calibration-labels.example.yaml  calibration-tuning-proposed.example.yaml
parking_spot_monitor/: __init__.py  __main__.py  capture.py  config.py  debug_overlay.py  detection.py  detection_lab.py  errors.py  geometry.py  health.py  live_proof.py  logging.py  matrix.py  occupancy.py  operator_cockpit.py  operator_decision_memory.py  owner_vehicles.py  paths.py  replay.py  scheduler.py  state.py  tuning.py  vehicle_estimates.py  vehicle_history.py  vehicle_history_cli.py  vehicle_history_images.py  vehicle_profiles.py
scripts/: assemble_m002_validation_package.py  capture_calibration_bundle.py  capture_passing_traffic_candidates.py  compare_calibration_tuning.py  hardware_decode_evidence.py  replay_calibration_cases.py  run_docker_alert_soak.py  run_docker_live_proof.py  validate_s07_label_contract.py  verify_alert_soak.py  verify_hardware_decode.py  verify_live_proof.py  verify_s05_operator_cockpit_closeout.py  verify_s07_replay_evidence.py
tests/: test_alert_soak_runner.py  test_alert_soak_verifier.py  test_calibration_bundle_operator_contract.py  test_calibration_replay.py  (+34 more)
(+5 files in other folders)
